updated code to remove deprecated warnings